--- a/ChairManager.Data/ChairManager.Data.csproj
+++ b/ChairManager.Data/ChairManager.Data.csproj
@@ -13,6 +13,8 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="MySql.Data" Version="8.3.0" />
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     </ItemGroup>
 
     <ItemGroup>
